--- a/scss/main.css
+++ b/scss/main.css
@@ -228,7 +228,8 @@ ul {
   width: 100%;
   padding-top: 32px;
 }
-.header .header-container {
+
+.header-container {
   /* 2 блока (логотип+ меню   и   кнопка) стали горизонтально рядом
   но align-items=stretch по-умолч - поэтому растянута кнопка по вертикали на всю высоту строки - родительского элемента (заданную наверное составом меню) */
   display: flex;
