--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -9,3 +9,5 @@
     /* #A28268; */
     --color-secondary-normal: #a18268;
 }
+
+// $color-primary-dark: #31261a;  //такой синтаксис можно в scss без :root 
