--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -15,39 +15,38 @@
     /* Растянуть header по ширине на 100%  */
     width: 100%;
     padding-top: 32px;
-}
 
-.header-container {
-    /* 2 блока (логотип+ меню   и   кнопка) стали горизонтально рядом
+
+    &__container {
+        /* 2 блока (логотип+ меню   и   кнопка) стали горизонтально рядом
     но align-items=stretch по-умолч - поэтому растянута кнопка по вертикали на всю высоту строки - родительского элемента (заданную наверное составом меню) */
-    display: flex;
-    /* сделать кнопку не растянутой stretch (по-умолч), а центрированной по вертикали */
-    align-items: center;
-    /* для разделить nav и кнопку при уменьшении размера экрана */
-    gap: 40px;
-}
+        display: flex;
+        /* сделать кнопку не растянутой stretch (по-умолч), а центрированной по вертикали */
+        align-items: center;
+        /* для разделить nav и кнопку при уменьшении размера экрана */
+        gap: 40px;
+    }
 
+    &__nav {
+        /* для расположить горизонтально рядом лого и меню в nav навигации */
+        display: flex;
+        align-items: center;
+        flex-grow: 1;
+        /* для разделить в nav лого и меню ы при уменьшении размера экрана */
+        gap: 40px;
+    }
 
-
-.header-nav {
-    /* для расположить горизонтально рядом лого и меню в nav навигации */
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-    /* для разделить в nav лого и меню ы при уменьшении размера экрана */
-    gap: 40px;
-}
-
-.header-menu {
-    /* это класс <ul> */
-    /* для меню расположить горизонтально */
-    display: flex;
-    /* для задать расстояние между элементами меню */
-    gap: 64px;
-    /* align-items: center; */
-    /* Чтобы занял все свободно место в родительском элементе nav (класс  .header-nav) :
+    &__menu {
+        /* это класс <ul> */
+        /* для меню расположить горизонтально */
+        display: flex;
+        /* для задать расстояние между элементами меню */
+        gap: 64px;
+        /* align-items: center; */
+        /* Чтобы занял все свободно место в родительском элементе nav (класс  .header-nav) :
   часть займет лого, а все оставшееся - меню ul */
-    flex-grow: 1;
-    /* выравнять по гоавной горизонтальной оси */
-    justify-content: center;
+        flex-grow: 1;
+        /* выравнять по гоавной горизонтальной оси */
+        justify-content: center;
+    }
 }
