--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -22,13 +22,13 @@
 
 /* Псевдоклассы состояния */
 .button {
-    padding: 16px 32px;
-    color: var(--color-primary-light);
-    font-weight: 600;
-    background-color: var(--color-brand-normal);
-    border: 2px solid var(--color-brand-normal);
-    border-radius: 8px;
-    cursor: pointer;
+  padding: 16px 32px;
+  color: var(--color-primary-light);
+  font-weight: 600;
+  background-color: var(--color-brand-normal);
+  border: 2px solid var(--color-brand-normal);
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 /* специфичность */
@@ -46,8 +46,11 @@
 } */
 
 .button:hover {
-    color: color-brand-dark;
-    background-color: transparent;
+  // color: color-brand-dark;
+  color: var(--color-brand-dark);
+  // это для заголовка норм,      там фон темный,       для др мест - белые на прозрачном фоне - не видно)
+  // background-color: transparent;
+  background-color: var(--color-primary-light);
 }
 
 /* визуально отразить , если элемент кнопка disabled (программно отключен в html) */
