--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,10 +10,17 @@ body {
     color: var(--color-primary-dark);
     background-color: var(--color-primary-light);
     font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
+    // font-size: 18px;     //было для десктопной версии, перенсели в ч.2 @media
+    font-size: 16px; //для адаптива , это для моб. версии
+    // font-weight: 400;    //было для десктопной версии, перенсели в ч.2 @media
+    font-weight: 300; //для адаптива , это для моб. версии
     line-height: 1.5;
     margin: 0;
+
+    @media screen and (min-width: $bp-tablet) {
+        font-size: 18px; // для десктопной версии др шрифт в параграфе. Он базовый. наследуется
+        font-weight: 400; //для десктопной версии
+    }
 }
 
 h1,
