mod18 adaptive image

--- a/scss/layouts/_section.scss
+++ b/scss/layouts/_section.scss
@@ -8,7 +8,13 @@ color там указан как основной для всей страниц
 
 
 .section {
-    padding: 48px 0;
+    // padding: 48px 0;//перенесено вниз в десктоп-версию
+    padding: 20px 0; //для моб вресии 40 между сециями . делить на 2 
+
+    @media screen and (min-width: $bp-tablet) {
+        // перенесно сюда сверху, здесь теперь десктоп-версия (48=96/2 между секциями)
+        padding: 48px 0;
+    }
 
     &__title {
         //1. моб. версия
