--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -34,6 +34,18 @@
     padding: 272px 0;
   }
 
+  //ретинизация фона. для apple в 2 р больше физических пикселей. Отдельно скачанная картинка 2x
+  @media screen and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    background-image: linear-gradient(102.76deg,
+        rgba(18, 18, 17, 0.78) 2.03%,
+        rgba(18, 18, 17, 0.6) 58.46%,
+        rgba(18, 18, 17, 0) 90.36%),
+      url("../images/hero-section-background@2x.jpg");
+  }
+
+
 
 
   /* h1 сучасна пекарня */
