mod19 chefs adaptive

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -33,6 +33,13 @@ p {
     margin-top: 0;
 }
 
+
+img {
+    display: block; //по-умолч изоюражения строковые элементы
+    max-width: 100%; //чтобы были респонсивными по-умолч . имеют маки ширину и имеют возможность масштабироваться, а не оставаться фиксированного указанного размера
+    height: auto;
+}
+
 a {
     /* всем ссылкам, чтобы сделать ссылку блоковой. Т.е. в нем буду работать размеры,
     но оно останется строчный(рядковым) . т.е. не будет растягиваться на всю ширину родительского элемента. */
