--- a/scss/layouts/_formats-section.scss
+++ b/scss/layouts/_formats-section.scss
@@ -8,7 +8,9 @@
 //     gap: 32px;
 
 .formats-section {
-    &__container {
+
+    // &__container {
+    &__slider {
         display: flex;
         /* выставить кнопки по вспомог. оси вертикальной посредине */
         align-items: center;
@@ -16,27 +18,45 @@
         gap: 32px;
     }
 
-    //перенесен из _format-card.scss
-    // .formats-title {
-    &__title {
-        /* от h2 Walrus...  до p */
-        margin-bottom: 80px;
+    &__container {
+        // После добавления внешнего swiper стала динамически расти ширина карточки.
+        // Чтобы остановить- добавлен overflow hidden
+        // overflow hidden перекрыли все,
+        //     что выходит за размеры заданного нами размера
+        overflow: hidden;
     }
 
-    &__list {
-        /* расположить карточки горизоантально */
-        display: flex;
-        flex-wrap: wrap;
-        /*переносить карточки из расч. 100% / 3*/
-        gap: 20px;
-        /*на макете так*/
-    }
+    // убираю - нет в уроке 19 этого на экране
+    // //перенесен из _format-card.scss
+    // // .formats-title {
+    // &__title {
+    //     /* от h2 Walrus...  до p */
+    //     margin-bottom: 80px;
+    // }
 
-    // .format-item  надо {
-    &__item {
-        /* 40 px это 2 gap по 20 px */
-        flex-basis: calc((100% - 40px) / 3);
-    }
+    //убрать класс formats-section__list после добавления внешней dll swiper
+    // &__list {
+    //     /* расположить карточки горизоантально */
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     /*переносить карточки из расч. 100% / 3*/
+    //     gap: 20px;
+    //     /*на макете так*/
+    // }
+
+    // убрали при адаптиве. Вернул - ломается, 3 в ряд не делается без itemx
+    // Ненадо, делали для примера 
+    // Т.к. они всегда будут в 1 ряд. Это мы пробовали – чтобы показать,
+    // если они добавляются,
+    // как их правильно расположить по 3 в ряд
+
+
+    //убрали при адаптиве, при замене на слайдер swiper из внешней dll https: //swiperjs.com 
+    // // .format-item  надо {
+    // &__item {
+    //     /* 40 px это 2 gap по 20 px */
+    //     flex-basis: calc((100% - 40px) / 3);
+    // }
 }
 
 
